feat: add blog copy for interventions app

--- a/data/portfolio/aaa-covid-app/index.mdx
+++ b/data/portfolio/aaa-covid-app/index.mdx
@@ -5,3 +5,10 @@ link: 'https://intervention-model.herokuapp.com/'
 image: 'demo.png'
 ---
 
+The <u>Intervensions Dashboard</u> is an MVP we put together for Google in 2020. It was coded in Python, and is leveraging both the open-source [Dash](https://dash.plotly.com/) library, as well as the [Dash Design Kit](https://plotly.com/dash/design-kit/), Plotly’s Enterprise solution.
+
+Under tight time constraints (3-4 weeks), we managed to successfully complete our objective: to reproduce the original app, using mock data, only with the tools of Plotly and Dash. Given our scope and rapid development time, we agreed to include mock data for only 3 states: California, New York, and Washington.
+
+The original R-Shiny app, which is part of a broader project consisting of many dashboards and models, is focused on “state and county-level insight into the dynamics of COVID-19 regarding hospital capacity, PPE, and non-pharmaceutical interventions (NPIs)” [GitHub] For more information, see their [GitHub repo](https://github.com/c19hcc/c19-modeling-tools/).
+
+And so, after many long days and a grudging all-nighter, it was complete! 🙌
