feat: apply feedback for google blog post

--- a/data/portfolio/a-covid-app/index.mdx
+++ b/data/portfolio/a-covid-app/index.mdx
@@ -5,9 +5,9 @@ link: 'https://intervention-model.herokuapp.com/'
 image: 'demo.png'
 ---
 
-The [<u>Interventions Dashboard</u>](https://intervention-model.herokuapp.com/) is an MVP we put together for Google in 2020. Under tight time constraints (3-4 weeks), we managed to complete our objective: successfully reproduce an R-Shiny dashboard entirely using the tools of Plotly and Dash!
+The [<u>Interventions Dashboard</u>](https://intervention-model.herokuapp.com/) is an MVP we put together for Google in 2020. Under tight time constraints (3-4 weeks), we managed to complete our objective: successfully reproduce an R-Shiny dashboard, strictly using the tools of Plotly and Dash!
 
-This webapp is coded in Python and is leveraging both the open-source [Dash](https://dash.plotly.com/) library and the [Dash Design Kit](https://plotly.com/dash/design-kit/), Plotly’s Enterprise solution.
+This Web App is coded in Python and is leveraging both the open-source [Dash](https://dash.plotly.com/) library and the [Dash Design Kit](https://plotly.com/dash/design-kit/), Plotly’s Enterprise solution.
 
 The original app, which is part of a broader project consisting of many dashboards and predictive models, focuses on _“[USA] state and county-level insight into the dynamics of COVID-19 regarding hospital capacity, PPE, and non-pharmaceutical interventions”_ [1]. Due to our scope and rapid development time, we agreed to only use mock data and limit user selection to only 3 states: California, New York, and Washington.
 
